Add `virtualenv` option to Python examples
Use the automatically managed `virtualenv: venv` support in all Python examples.

See https://www.pulumi.com/docs/intro/languages/python/#virtual-environments.

--- a/aws-django-voting-app/Pulumi.yaml
+++ b/aws-django-voting-app/Pulumi.yaml
@@ -1,5 +1,8 @@
 name: voting-app
-runtime: python
+runtime:
+  name: python
+  options:
+    virtualenv: venv
 description: Voting app that uses containers
 template:
   config:
