--- a/aws-py-assume-role/create-role/Pulumi.yaml
+++ b/aws-py-assume-role/create-role/Pulumi.yaml
@@ -1,3 +1,6 @@
 name: create-role
-runtime: python
+runtime:
+  name: python
+  options:
+    virtualenv: venv
 description: Demonstrate use of AWS AssumeRole Functionality
