--- a/aws-py-ec2-provisioners/Pulumi.yaml
+++ b/aws-py-ec2-provisioners/Pulumi.yaml
@@ -1,3 +1,6 @@
 name: aws-py-ec2-provisioners
-runtime: python
+runtime:
+  name: python
+  options:
+    virtualenv: venv
 description: An example of manually configuring an AWS EC2 virtual machine
