--- a/aws-py-stackreference/department/Pulumi.yaml
+++ b/aws-py-stackreference/department/Pulumi.yaml
@@ -1,5 +1,8 @@
 name: aws-py-stackreference-department
-runtime: python
+runtime:
+  name: python
+  options:
+    virtualenv: venv
 description: An AWS TypeScript Pulumi program demonstrating sharing configuration
   via StackReference resources in Python
 template:
