--- a/azure-nextgen-py-synapse/Pulumi.yaml
+++ b/azure-nextgen-py-synapse/Pulumi.yaml
@@ -1,3 +1,6 @@
 name: azure-nextgen-py-synapse
-runtime: python
+runtime:
+  name: python
+  options:
+    virtualenv: venv
 description: Creates Azure Synapse workspace with SQL and Spark pools
