--- a/azure-py-appservice/Pulumi.yaml
+++ b/azure-py-appservice/Pulumi.yaml
@@ -1,5 +1,8 @@
 name: azure--pyappservice
-runtime: python
+runtime:
+  name: python
+  options:
+    virtualenv: venv
 description: Creates Azure App Service with SQL Database and Application Insights in Python
 template:
   config:
