--- a/digitalocean-py-loadbalanced-droplets/Pulumi.yaml
+++ b/digitalocean-py-loadbalanced-droplets/Pulumi.yaml
@@ -1,3 +1,6 @@
 name: digitalocean-py-loadbalanced-droplets
-runtime: python
+runtime:
+  name: python
+  options:
+    virtualenv: venv
 description: Basic example of load balanced droplets on DigitalOcean in Python
