--- a/gcp-py-functions/Pulumi.yaml
+++ b/gcp-py-functions/Pulumi.yaml
@@ -1,3 +1,6 @@
 name: gcp-py-functions
-runtime: python
+runtime:
+  name: python
+  options:
+    virtualenv: venv
 description: A minimal Python Pulumi program using Google Cloud Functions.
