--- a/gcp-py-gke/Pulumi.yaml
+++ b/gcp-py-gke/Pulumi.yaml
@@ -1,3 +1,6 @@
 name: gcp-py-gke
 description: A Google Kubernetes Engine (GKE) cluster, with canary deployment
-runtime: python
+runtime:
+  name: python
+  options:
+    virtualenv: venv
