--- a/packet-py-webserver/Pulumi.yaml
+++ b/packet-py-webserver/Pulumi.yaml
@@ -1,3 +1,6 @@
 name: packet-py-webserver
 description: A simple server on Packet.
-runtime: python
+runtime:
+  name: python
+  options:
+    virtualenv: venv
