--- a/aws-py-assume-role/assume-role/Pulumi.yaml
+++ b/aws-py-assume-role/assume-role/Pulumi.yaml
@@ -1,3 +1,6 @@
 name: assume-role
-runtime: python
+runtime:
+  name: python
+  options:
+    virtualenv: venv
 description: Demonstrate use of AWS AssumeRole Functionality
