--- a/aws-py-serverless-raw/Pulumi.yaml
+++ b/aws-py-serverless-raw/Pulumi.yaml
@@ -1,5 +1,8 @@
 name: serverless-raw
-runtime: python
+runtime:
+  name: python
+  options:
+    virtualenv: venv
 description: Basic example of a serverless AWS application
 template:
   config:
