--- a/aws-py-stackreference/company/Pulumi.yaml
+++ b/aws-py-stackreference/company/Pulumi.yaml
@@ -1,5 +1,8 @@
 name: aws-py-stackreference-company
-runtime: python
+runtime:
+  name: python
+  options:
+    virtualenv: venv
 description: An AWS Python Pulumi program demonstrating sharing configuration
   via StackReference resources
 template:
