--- a/azure-nextgen-py-aci/Pulumi.yaml
+++ b/azure-nextgen-py-aci/Pulumi.yaml
@@ -1,5 +1,8 @@
 name: azureng-py-aci
-runtime: python
+runtime:
+  name: python
+  options:
+    virtualenv: venv
 description: Creates Azure Container Instance with a public IP
 template:
   config:
