--- a/azure-py-msi-keyvault-rbac/Pulumi.yaml
+++ b/azure-py-msi-keyvault-rbac/Pulumi.yaml
@@ -1,5 +1,8 @@
 name: azure-py-msi-keyvault-rbac
-runtime: python
+runtime:
+  name: python
+  options:
+    virtualenv: venv
 description: Example of managing the secrets and permissions via services and features like KeyVault, AD Managed Identity, AD RBAC in Python
 template:
   config:
